--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+a{
+    color: rgb(250, 250, 250);
+}
+
 head{
 
 }
@@ -12,14 +16,25 @@ nav{
 
 }
 
-ul a{
+
+ul {
+    list-style-type: none;
+            margin: 0;
+            padding: 1em;
+            overflow: hidden;
+            background-color: rgb(0, 0, 0);
+}
+
+
+li {
     display: block;
-            padding: 8px;
             text-align: center;
             text-decoration: none;
             font-weight: bold;
             display: inline;
+            margin-left: 10px;
 }
+
 
 h1{
 
