--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 a{
-    color: rgb(250, 250, 250);
+    color: rgb(3, 3, 3);
 }
 
-head{
-
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-title{
-
+header{
+    text-align: center;  
 }
 
 
@@ -18,21 +18,28 @@ nav{
 
 
 ul {
-    list-style-type: none;
+            list-style-type: none;
             margin: 0;
             padding: 1em;
             overflow: hidden;
-            background-color: rgb(0, 0, 0);
+            background-color: rgb(253, 251, 251);
+            text-decoration: none;
 }
 
 
 li {
-    display: block;
-            text-align: center;
+    list-style-type: none;   
+            display: block;
             text-decoration: none;
+            text-align: center;
             font-weight: bold;
             display: inline;
             margin-left: 10px;
+}
+
+li :hover{
+    color: rgb(227, 161, 81);
+    text-decoration: underline;
 }
 
 
@@ -41,5 +48,7 @@ h1{
 }
 
 img{
+    margin: auto;
+    opacity: 0.6;
 
 }
