--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,12 @@ a{
 
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
+    padding: 0;
+    margin: 0;
+    background-color: rgb(69, 56, 56);
 }
+
 
 header{
     display: flex;
@@ -21,6 +26,15 @@ header h1{
     flex-grow: 1;
 }
 
+section.juomat{
+    background-color: rgb(255, 255, 255);
+    padding: 1em;
+}
+section.Kuvat{
+    display: flex;
+    flex-grow: 2;
+
+}
 
 
 
@@ -36,7 +50,7 @@ ul {
             margin: 0;
             padding: 1em;
             overflow: hidden;
-            background-color: rgb(253, 251, 251);
+        
             text-decoration: none;
 }
 
@@ -64,7 +78,7 @@ img{
 
 }
 article{
-    background-color: black;
+    
     text-align: center;
     padding: 100px;
     
@@ -76,5 +90,68 @@ article p{
 
 footer{
     text-align: center;
-    background-color: dimgrey;
+   
+}
+/* -------------SLIDE SHOW   */
+
+
+.slider-frame{
+    flex: 2;
+    overflow: hidden;
+    height: 800px;
+    width: 1200px;
+    margin-left: 360px;
+    margin-top: 20px;
+}
+
+@keyframes slide_animation{
+    0% {left:0px;}
+    10% {left:0px;}
+    20% {left:1200px;}
+    30% {left:1200px;}
+    40% {left: 2400px;}
+    50% {left: 2400px;}
+    60% {left: 1200px;}
+    70% {left: 1200px;}
+    80% {left: 0px;}
+    90% {left: 0px;}
+    100% {left:0px;}
+}
+
+@-webkit-keyframes slide_animation{
+    0% {left:0px;}
+    10% {left:0px;}
+    20% {left:1200px;}
+    30% {left:1200px;}
+    40% {left: 2400px;}
+    50% {left: 2400px;}
+    60% {left: 1200px;}
+    70% {left: 1200px;}
+    80% {left: 0px;}
+    90% {left: 0px;}
+    100% {left:0px;}
+}
+
+.slide-images{
+    width: 3600px;
+    height: 800px;
+    margin: 0 0 0 -2400px;
+    position: relative;
+    -webkit-animation-name: slide_animation;
+    animation-name: slide_animation;
+    -webkit-animation-duration: 33s;
+    animation-duration: 33s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+}
+
+.img-container{
+    height: 800px;
+    width: 1200px;
+    position: relative;
+    float: left;
 }
