--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,9 @@ footer{
 
  
 .wrapper {
-    width: 100%;
+
+    margin-left: 200px; 
+    width: 80%;
     height: 80vh;
     overflow: hidden;
     position: relative;
