--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 0;
     margin: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: dimgray;
 }
 
 header{
@@ -67,18 +67,23 @@ text-decoration: none;
 
 
 
-h2{
+.teksti{
     background-color: rgb(0, 0, 0);
     text-overflow: ellipsis;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
+    margin-bottom: 2px;
+    color: white;
 }
 
-img#team{
-    
-}
+
+
 
 article{
+    text-align: center;
+}
+footer{
+    margin-top: 5px;
     text-align: center;
 }
 
