--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -73,7 +73,7 @@ text-decoration: none;
     text-overflow: ellipsis;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
-    margin-bottom: 2px;
+    padding: 2em;
     color: white;
 }
 #fontti{
