--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -84,8 +84,9 @@ text-decoration: none;
 
 
 img#team{
-    height: 700px;
-    weight: auto;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
     
 }
 
