--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,9 @@ footer{
  
 .wrapper {
 
-    margin-left: 200px; 
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
     width: 80%;
     height: 80vh;
     overflow: hidden;
