--- a/css/style.css
+++ b/css/style.css
@@ -93,24 +93,29 @@ img{
     margin: auto;
 
 }
-article{
+.artikkeli{
     
     text-align: center;
     padding: 100px;
     
 }
-article p{
+.artikkeli p{
     color: aliceblue;
     margin: 5px;
     font-size: 25px;
 }
 
 footer{
+    font-family: "Trirong", serif;
+    font-weight: bold;
+    margin-top: 50px;
     text-align: center;
    
 }
 .juomat{
-   
+    
+    font-family: "Trirong", serif;
+    font-weight: bold;
     text-align: center;
     background-image: url('/Team2_Projekti/images/backround.jpg');
     background-repeat: no-repeat;
@@ -119,13 +124,13 @@ footer{
 
 }
 
-#batteryt{
+.batteryt{
     max-width: 250px;
     max-height: 250px;
   
 
 }
-#batteryt1{
+.batteryt1{
     max-width: 200px;
     max-height: 200px;
   
@@ -143,8 +148,8 @@ footer{
     display: block;
   margin-left: auto;
   margin-right: auto;
-    width: 80%;
-    height: 80vh;
+    width: 100%;
+    height: 90vh;
     overflow: hidden;
     position: relative;
     background-color: #000;
