--- a/css/contact.css
+++ b/css/contact.css
@@ -44,17 +44,22 @@ li :hover{
 
 header{
     display: flex;
-    text-align: left;
-   
+    text-align: left;  
+}
+
+header a {
+    color: black;
+    text-decoration: none;
 }
 
 img#logo1{
     margin-left: 200px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     flex: 1;
     max-width: 70px;
     max-height: 70px;
 }
+
 header h1{
     font-family: "Audiowide", sans-serif;
     font-weight: bold;
