--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,5 +1,5 @@
 a{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
@@ -8,7 +8,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 0;
     margin: 0;
-    background-color: dimgray;
+    background-color: #201f1f;
 }
 
 header{
