--- a/css/style-products.css
+++ b/css/style-products.css
@@ -12,7 +12,7 @@ body{
     
     padding: 0;
     margin: 0;
-    background-color: dimgray;
+    background-color: #201f1f;
 }
 main{
     display: flex;
