--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -95,6 +95,7 @@ article{
 }
 footer{
     font-family: "Trirong", serif;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     margin-top: 50px;
     text-align: center;
