--- a/css/style-products.css
+++ b/css/style-products.css
@@ -3,7 +3,7 @@
     font-weight: bold;
 }
 a{
-    color: rgb(3, 3, 3);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
@@ -18,7 +18,7 @@ main{
     display: flex;
     
     justify-content: center;
-    background-image: url('/Team2_Projekti/images/backround.jpg');
+    background-image: url('/images/taustajuomille.png');
     background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -30,9 +30,10 @@ main{
 .teksti{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 25px;
+    color: aliceblue;
     font-weight: bold;
     text-align: center;
-    border:  5px solid #333;
+    border:  5px solid #ffffff;
     margin-left: 250px;
     margin-top: 200px;
     margin-bottom: 200px;
@@ -65,12 +66,14 @@ img#logo1{
 header h1{
     font-family: "Audiowide", sans-serif;
     font-weight: bold;
+    color: rgb(255, 255, 255);
     margin-top: 8px;
     flex-grow: 1;
 }
 h2{
     font-family: "Audiowide", sans-serif;
     font-weight: bold;
+    color: rgb(255, 255, 255);
     font-size: 50px;
 
 }
@@ -110,6 +113,7 @@ li :hover{
 footer{
     font-family: "Trirong", serif;
     font-weight: bold;
+    color: rgb(255, 255, 255);
     margin-top: 50px;
     text-align: center;
    
