--- a/css/styles1.css
+++ b/css/styles1.css
@@ -1,5 +1,5 @@
 a{
-    color: rgb(3, 3, 3);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
@@ -8,7 +8,7 @@ body{
     
     padding: 0;
     margin: 0;
-    background-color: dimgray;
+    background-color: #201f1f;
 }
 #fontti{
     font-family: "Trirong", serif;
@@ -31,6 +31,7 @@ img#logo1{
 }
 header h1{
     font-family: "Audiowide", sans-serif;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     margin-top: 8px;
     flex-grow: 1;
@@ -74,7 +75,7 @@ li :hover{
     flex-wrap: wrap;
     justify-content: center;
     
-    background-image: url('/Team2_Projekti/images/backround.jpg');
+    background-image: url('/images/taustajuomille.png');
     background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -94,6 +95,7 @@ li :hover{
 footer{
     
     font-family: "Trirong", serif;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     margin-top: 50px;
     text-align: center;
