--- a/css/style-products.css
+++ b/css/style-products.css
@@ -18,7 +18,7 @@ main{
     display: flex;
     
     justify-content: center;
-    background-image: url('/images/taustajuomille.png');
+    background-image: url('../images/taustajuomille.png');
     background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
