--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ footer{
     font-family: "Trirong", serif;
     font-weight: bold;
     text-align: center;
-    background-image: url('/images/taustajuomille.png');
+    background-image: url('../images/taustajuomille.png');
     background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
