--- a/css/style-products.css
+++ b/css/style-products.css
@@ -86,7 +86,7 @@ nav{
 
 
 
-ul {
+nav ul {
             list-style-type: none;
             margin: 0;
             padding: 1em;
@@ -96,7 +96,7 @@ ul {
 }
 
 
-li {
+nav li {
     list-style-type: none;   
             display: block;
             text-decoration: none;
@@ -106,15 +106,109 @@ li {
             margin-left: 10px;
 }
 
-li :hover{
+nav li :hover{
     color: rgb(215, 207, 197);
     text-decoration: none;
 }
+.footcont {
+    max-width: 1170px;
+    margin: auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+footer ul {
+    list-style: none;
+}
+
 footer{
     font-family: "Trirong", serif;
+    background-color: #201f1f;
+    color: #fff;
+    padding: 70px 0;
+}
+
+.footer-col {
+    width: 25%;
+    padding: 0 15px;
+}
+
+.footer-col h4 {
     font-weight: bold;
-    color: rgb(255, 255, 255);
-    margin-top: 50px;
+    color: #fff;
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    position: relative;
+}
+
+.footer-col h4::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color:  rgb(179, 173, 165);
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+
+.footer-col ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+
+.footer-col ul li {
+    color: rgb(202, 196, 188);
+}
+
+.footer-col ul li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: 300;
+    display: block;
+    color: rgb(202, 196, 188);
+    transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+    color:  rgb(215, 207, 197);
+    padding-left: 10px;
+}
+
+.footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: #333;
+    margin: 0 10px 10px 0;
     text-align: center;
-   
+    line-height: 40px;
+    border-radius: 50%;
+    color: #fff;
+    transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover {
+    color: #333;
+    background-color: #fff;
+}
+
+@media (max-width: 767px){
+    .footer-col {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 574px){
+    .footer-col {
+        width: 100%;
+    }
+    header img#logo1 {
+        width: 150px;
+        padding-top: 10px;
+    }
 }
