--- a/css/email.css
+++ b/css/email.css
@@ -21,9 +21,22 @@ input[type=submit] {
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type=button]:hover {
   background-color: #6d44b8;
 }
+
+input[type=button] {
+    background-color: #573b8a;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #6d44b8;
+  }
 
 .container {
   border-radius: 5px;
