--- a/css/email.css
+++ b/css/email.css
@@ -25,16 +25,17 @@ input[type=button]:hover {
   background-color: #6d44b8;
 }
 
-input[type=button] {
+button {
     background-color: #573b8a;
     color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 5px;
   }
   
-  input[type=submit]:hover {
+  button:hover {
     background-color: #6d44b8;
   }
 
